[package]
edition = "2021"
name = "bun-redis-bindings"
version = "0.0.3"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.8.0", default-features = false, features = ["napi8"] }
napi-derive = "2.8.0"

[dependencies.redis]
version = "0.21.5"
features = ["tls"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
